# weather-fastapi-gcp

./: .dockerignore  .env.cicd.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/weather_fastapi_gcp/: __init__.py  main.py  run.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
