[project]
name = "weather-fastapi-gcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Etty Sekhon", email = "etty.sekhon@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
weather-fastapi-gcp = "weather_fastapi_gcp:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

packages = [{ include = "weather_fastapi_gcp", from = "src" }]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.8",
    "uvicorn>=0.35.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".venv",
  "build",
  "dist",
]
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
  "E", "F", "I", "B", "W",    # basic linting & style
  "UP",                       # upgrade Python syntax
  "N",                        # pep8-naming
  "SIM",                      # simplify
  "C4",                       # comprehensions
  "TID",                      # tidy imports
]
ignore = [
  "E501",  # line length (handled by Black)
  "W292",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["api", "poller"]
skip = [".venv", "build", "dist"]
